--- a/gb/19/9/19/n11531121.md
+++ b/gb/19/9/19/n11531121.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vzavnd348/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vzavnd348/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vzavnd348/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vzavnd348/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vzavnd348/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vzavnd348/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vzavnd348/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vzavnd348/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vzavnd348/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vzavnd348/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vzavnd348/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vzavnd348/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vzavnd348/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vzavnd348/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vzavnd348/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vzavnd348/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/vzavnd348/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vzavnd348/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/vzavnd348/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vzavnd348/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vzavnd348/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vzavnd348/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vzavnd348/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vzavnd348/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>师生比例对比 南澳公私教会学校差别不大</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年09月19日讯】（大纪元记者方君华澳洲阿德莱德编译报导）在<ahref="https://github.com/vzavnd348/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>的<ahref="https://github.com/vzavnd348/djy/blob/master/gb/tag/%E5%85%AC%E6%A0%A1.md#1">公校</a>、独立<ahref="https://github.com/vzavnd348/djy/blob/master/gb/tag/%E7%A7%81%E6%A0%A1.md#1">私校</a>和<ahref="https://github.com/vzavnd348/djy/blob/master/gb/tag/%E5%A4%A9%E4%B8%BB%E6%95%99%E5%AD%A6%E6%A0%A1.md#1">天主教学校</a>中，哪个部门的学校在<ahref="https://github.com/vzavnd348/djy/blob/master/gb/tag/%E5%B8%88%E7%94%9F%E6%AF%94%E4%BE%8B.md#1">师生比例</a>上占优？下面就从数据来对比各部门的小学、中学和R-12学校。</p>
-<p>据广告人报（The Advertiser）报导，以每位全职教师对学生人数比为指标，阿德莱德的公立小学要胜出<ahref="https://github.com/vzavnd348/djy/blob/master/gb/tag/%E5%A4%A9%E4%B8%BB%E6%95%99%E5%AD%A6%E6%A0%A1.md#1">天主教学校</a>，但差距极小。</p>
-<p>媒体搜集整理了<ahref="https://github.com/vzavnd348/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>每所学校的完整数据资料，以公立、私立和天主教学校来分类，对比小学、中学和联合学校的教师资源。</p>
-<p>所有类型学校的平均比例都很接近，这意味着<ahref="https://github.com/vzavnd348/djy/blob/master/gb/tag/%E7%A7%81%E6%A0%A1.md#1">私校</a>的高学费并不总转化为更好的师资配备水平。</p>
+<p>【大纪元2019年09月19日讯】（大纪元记者方君华澳洲阿德莱德编译报导）在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%85%AC%E6%A0%A1.md#1">公校</a>、独立<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%81%E6%A0%A1.md#1">私校</a>和<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A9%E4%B8%BB%E6%95%99%E5%AD%A6%E6%A0%A1.md#1">天主教学校</a>中，哪个部门的学校在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B8%88%E7%94%9F%E6%AF%94%E4%BE%8B.md#1">师生比例</a>上占优？下面就从数据来对比各部门的小学、中学和R-12学校。</p>
+<p>据广告人报（The Advertiser）报导，以每位全职教师对学生人数比为指标，阿德莱德的公立小学要胜出<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A9%E4%B8%BB%E6%95%99%E5%AD%A6%E6%A0%A1.md#1">天主教学校</a>，但差距极小。</p>
+<p>媒体搜集整理了<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%97%E6%BE%B3.md#1">南澳</a>每所学校的完整数据资料，以公立、私立和天主教学校来分类，对比小学、中学和联合学校的教师资源。</p>
+<p>所有类型学校的平均比例都很接近，这意味着<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A7%81%E6%A0%A1.md#1">私校</a>的高学费并不总转化为更好的师资配备水平。</p>
 <p>在阿德莱德的50多所天主教小学中，去年的学生/全职教师平均比例约为17。</p>
 <p>在大都市区范围内的180多所公立小学，除去离城市不远的包括阿德莱德山区的学校，该比例平均略低于16。</p>
 <p>最低平均比例是14，来自独立私校，但数据样本小，仅有18所学校。</p>
@@ -32,48 +32,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/19/2/28/n11078294.md#1">南澳公校NAPLAN统考成绩排行榜揭晓</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/19/2/28/n11078328.md#1">南澳特长公校培养天才学生</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/19/4/4/n11161361.md#1">南澳教育专家：不要将12年级考试视为竞争</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/19/5/22/n11272159.md#1">南澳数万学生参加NAPLAN机考</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/19/5/29/n11286534.md#1">学校和老年护理中心二合为一 澳洲首创</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/19/5/29/n11287003.md#1">南澳三所学校七年级首批转入高中</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/19/7/3/n11360832.md#1">南澳教育证书在世界普及开来</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/19/8/27/n11480760.md#1">跟进新州 南澳议员敦促审查孔子学院项目</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/26/n12575889.md#1">阿德莱德一名女中学生染疫 学校关闭</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12573565.md#1">被指误导当局导致南澳封锁 披萨店员工致歉</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/2/28/n11078294.md#1">南澳公校NAPLAN统考成绩排行榜揭晓</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/2/28/n11078328.md#1">南澳特长公校培养天才学生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/4/n11161361.md#1">南澳教育专家：不要将12年级考试视为竞争</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/5/22/n11272159.md#1">南澳数万学生参加NAPLAN机考</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/5/29/n11286534.md#1">学校和老年护理中心二合为一 澳洲首创</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/5/29/n11287003.md#1">南澳三所学校七年级首批转入高中</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/3/n11360832.md#1">南澳教育证书在世界普及开来</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/27/n11480760.md#1">跟进新州 南澳议员敦促审查孔子学院项目</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680514.md#1">阿市高中成为南澳第四所因疫情关闭的学校</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680369.md#1">南澳新内阁亮相 独立议员意外入选</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/10/n11444846.md#1" target="_blank">夏祷：2019火种：天象巨变（1）</a></li><li><a href="https://github.com/vzavnd348/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/16/n11387274.md#1" target="_blank">7-20反迫害 美参众议员致信声援法轮功(1)</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/16/n10061474.md#1" target="_blank">“不学ABC 能做接班人”的张玉勤</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10578907.md#1" target="_blank">【细语人生】见证大法的神奇（13）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/10/26/n12503755.md#1">北宋名将滥杀降军 这笔业债如何还？</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/22/n12567180.md#1">曾预言中共病毒 英灵媒再预测2021年大事</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/16/n12553592.md#1">美国大十字日全食带预言川普大选及末世大决战</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/20/n12564664.md#1">《狮子王》复仇记：王位之争即正邪大战</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/10/22/n12495148.md#1">德与财的故事：曾国藩和林则徐的选择</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/26/n12576193.md#1">【拍案惊奇】共和党浪潮 川普曾预言国会取胜</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/26/n12577737.md#1">【财商天下】公私合营复活？“待割韭菜”出逃</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/18/n12558731.md#1">【思想领袖】爱泼斯坦：科技巨头操纵选举</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12573298.md#1">川普律师寻求将自己在威州的选票废除</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12574897.md#1">习近平破惯例提前祝贺拜登 专家析背后原因</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12575706.md#1">遭死亡威胁 向朱利安尼提供拜登数据的店主关店</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/24/n12572570.md#1">疑踩中共禁区 张艺谋《一秒钟》遭金鸡奖撤映</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/26/n12577188.md#1">谢金燕制作人吕晓栋猝逝 传倒卧高以翔墓园旁</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/24/n12572786.md#1">观金马片《夜更》洒泪 杜汶泽叹亏欠香港年轻人</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12575491.md#1">遭旧爱追款现身法庭 星爷笑言高院是否要装修</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/24/n12573128.md#1">陶虹曝徐峥当年求婚：话没说完就被保安赶走</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/24/n12571000.md#1">大火中救4人 俄罗斯怀孕母狗自己却被烧伤</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12574162.md#1">天外飞来的？ 美国沙漠惊现神秘金属巨柱</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/24/n12571675.md#1">解密画面：美军F-35战机试投B61-12核弹</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/24/n12572434.md#1">Moderna：无法证明疫苗可阻止病毒传播</a></li>
-<li><a href="https://github.com/vzavnd348/djy/blob/master/gb/20/11/25/n12572908.md#1">5分钟杀死病毒 加国亚伯塔大学研发口罩获奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/7/12/n8091804.md#1">【传奇】赵匡胤千里送京娘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/15/n12812584.md#1">罗马时代迫害基督徒 今生仍在偿还业债</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/23/n12829555.md#1">中共病毒（新冠病毒）的变异现灵性</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/11/n12804755.md#1">“后庭花”为什么是亡国之音的代称？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/26/n12837707.md#1">【传奇大观】天仙失言落凡尘 恋久生情再沉沦</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/30/n12844511.md#1">【探索时分】台湾F16V升级 台海新战机来袭</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12844409.md#1">【横河直播】世卫报告替中共甩锅 利益冲突遭疑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12844230.md#1">【时事纵横】小粉红抵制完败？中捷牵线人坠机亡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/22/n12826574.md#1">不想花钱换手机？五招改善你的手机速度</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/27/n12839676.md#1">【名家专栏】攻击美国 中共欲重新定义人权</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12841466.md#1">抵制声浪下 耐克、阿迪达斯产品仍遭哄抢</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12841758.md#1">“战狼”吴京用iPhone发文 遭网民嘲讽</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12841453.md#1">香港金牌绿叶廖启智罹癌离世 享年66岁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12844152.md#1">三个月6位港星离世 廖启智抗癌细节曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840451.md#1">宋柏纬胞姊现身餐车 黄秋生夸气质：全台最美</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840534.md#1">韩国名编剧金银淑新戏开播 男主角撞脸孔刘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840638.md#1">台湾福卫五号拍到 苏伊士运河“大排长荣”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840882.md#1">美国男子离职 老板竟以9万多个硬币付薪水</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/26/n12838700.md#1">减肥身体亮红灯 营养师：我正常吃三餐 瘦到48公斤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/28/n12840728.md#1">泰贫女在海螺发现珍珠 罹癌母亲医药费有望</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/3/29/n12842315.md#1">泰国小偷行窃时竟然睡着 被警察叫醒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vzavnd348/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vzavnd348/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/19/n11531121.htm">师生比例对比 南澳公私教会学校差别不大</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/19/n11531121.htm">师生比例对比 南澳公私教会学校差别不大</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vzavnd348/djy/blob/master/gb/19/9/19/n11531121.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vzavnd348/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vzavnd348/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vzavnd348/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vzavnd348/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vzavnd348/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/9/19/n11531121.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
